<resources>
    <string name="app_name">My Can</string>
    <!-- Varias -->
    <string name="cargando_datos">Cargando datos...</string>
    <string name="action_settings">Settings</string>
    <string name="citaOK">Cita insertada correctamente</string>
    <string name="mascotaOK">Mascota insertada correctamente</string>
    <string name="updateOK">Modificacion realizada correctamente</string>
    <string name="dialogoPreguntaMascota">¿Seguro que quieres eliminar esta mascota?</string>
    <string name="dialogoPreguntaCita">¿Seguro que quieres eliminar esta cita?</string>
    <string name="dialogoBorrar">Borrar</string>
    <string name="dialogoCancelar">Cancelar</string>
    <string name="dialogoBuscar">Buscar</string>
    <string name="activityModificar">Actualizar datos</string>
    <string name="citaBorrada">Cita borrada correctamente</string>
    <!-- Campos de datos -->
    <string name="vacio">Vacio</string>
    <string name="nombre">Nombre: </string>
    <string name="raza">Raza: </string>
    <string name="propietario">Propietario: </string>
    <string name="telefono">Telefono: </string>
    <string name="fecha">Fecha: </string>
    <string name="hora">Hora: </string>
    <string name="precio">Precio (€): </string>
    <string name="descripcion">Descripcion: </string>
    <string name="buscarMascotaEDT">Introduce el nombre</string>
    <!-- Botones -->
    <string name="entrar">Entrar</string>
    <string name="insertarMascota">Nueva mascota</string>
    <string name="insertarCita">Nueva cita</string>
    <string name="borrarCita">Borrar cita</string>
    <string name="modificarMascota">Modificar mascota</string>
    <string name="borrarMascota">Borrar mascota</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
    <!-- Cabeceras -->
    <string name="cabecera_datos_mascota">Datos de la mascota</string>
    <string name="cabecera_datos_cita">Datos de la cita</string>
    <string name="historial_citas">Historial de citas</string>
    <string name="buscarMascota">Buscar mascota</string>
    <!-- Errores -->
    <string name="falloCita">Error al insertar la cita</string>
    <string name="falloMascota">Error al insertar la mascota</string>
    <string name="noCitas">Esta mascota no dispone de citas</string>
    <string name="borradoMascotaCitas">La mascota y sus citas han sido borradas correctamente</string>
    <string name="borradoMascota">La mascota se ha eliminado correctamente</string>
    <string name="falloBorradoMascotaCitas">Ha ocurrido un fallo al borrar la mascota y sus citas</string>
    <string name="falloBorradoMascota">Error al borrar la mascota</string>
    <string name="falloBorradoCita">Error al borrar la/s cita/s de esta mascota</string>
    <string name="errorBorrarCita">Error al borrar la cita</string>
    <string name="fechaIncorrecta">Fecha incorrecta</string>
    <string name="horaIncorrecta">Hora incorrecta</string>
    <string name="precioVacio">Precio requerido</string>
    <string name="errorMenuBorrar">Error en el boton borrar del menu</string>
    <string name="errorUpdate">Error en la modificacion</string>
    <string name="errorBuscar">Error al buscar</string>
    <!-- Titulos Actividades -->
    <string name="title_activity_list">Mascotas</string>
    <string name="title_activity_datos">Datos de la mascota</string>
    <string name="title_activity_insertar_mascota">Nueva mascota</string>
    <string name="title_activity_insertar_cita">Nueva cita</string>
    <string name="title_activity_list_citas">Lista de citas</string>
    <!-- Menus -->
    <string name="recargarMenu">Recargar</string>
    <string name="tituloMenu">Selecciona: </string>
    <string name="buscar">Buscar...</string>
    <array name="menuLista">
        <item>Modificar</item>
        <item>Eliminar</item>
    </array>
</resources>
