<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mycan.app_mycan.ListCitas">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuCitas_modificarMascota"
        android:title="@string/modificarMascota" />

    <item
        android:id="@+id/menuCitas_eliminarMascota"
        android:title="@string/borrarMascota" />

    <item
        android:id="@+id/menuCitas_insertarCita"
        android:title="@string/insertarCita" />
    <item
        android:id="@+id/menuCitas_eliminarCita"
        android:title="@string/borrarCita" />
</menu>
