<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mycan.app_mycan.ListActivity" >

    <item
        android:id="@+id/menu_recargar"
        android:title="@string/recargarMenu"
        android:icon="@drawable/ic_menu_refresh_dark"
        android:orderInCategory="4"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_buscarMascota"
        android:title="@string/buscar"
        android:icon="@drawable/ic_menu_search_holo_light"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_insertarMascota"
        android:title="@string/insertarMascota"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_insertarCita"
        android:title="@string/insertarCita"
        android:icon="@drawable/ic_menu_cut_holo_light"
        android:orderInCategory="2"
        app:showAsAction="always"/>
</menu>
