<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mycan.app_mycan.InsertarMascota"
    android:background="#ffc52df4" >

    <TableRow>
        <TextView
            android:id="@+id/cabeceraDatosCita"
            android:text="@string/cabecera_datos_cita"
            android:layout_span="3"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff" />
    </TableRow>
    <TableRow
        android:layout_marginTop="15dp">
        <Spinner
            android:id="@+id/spMascotas"
            android:layout_span="2"
            android:spinnerMode="dialog" />
    </TableRow>
    <TableRow
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tvFecha"
            android:text="@string/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff" />

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:inputType="text"
            android:textColor="#ffffffff"
            android:hint="dd/mm/aaaa"
            android:backgroundTint="#ffffff"
            android:lines="1" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/tvHora"
            android:text="@string/hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="20dp"
            android:textColor="#ffffffff" />

        <EditText
            android:id="@+id/etHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:inputType="text"
            android:textColor="#ffffffff"
            android:hint="hh:mm"
            android:backgroundTint="#ffffff"
            android:lines="1" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/tvPrecio"
            android:text="@string/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="220dp"
            android:inputType="text"
            android:textColor="#ffffffff"
            android:hint="0.0 o 0"
            android:backgroundTint="#ffffff"
            android:lines="1" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/tvDescipcion"
            android:text="@string/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textColor="#ffffffff"
            android:hint="Corte,\nLavado,\nCorte a tijera..."
            android:backgroundTint="#ffffff" />
    </TableRow>
    <TableRow>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_span="2"
            android:gravity="center"
            android:layout_marginTop="30dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:id="@+id/btGuardarCita"
                android:onClick="onClick"
                android:textColor="#ffc52df4"
                android:background="#ffffffff"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                android:id="@+id/btVolverCita"
                android:textColor="#ffc52df4"
                android:background="#ffffffff"
                android:onClick="onClick"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>

        </RelativeLayout>


    </TableRow>
</TableLayout>