<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.mycan.app_mycan.InsertarCita"
android:background="#ffc52df4" >

    <TableRow
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:background="#ffc52df4">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffc52df4" >
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
                <TextView
                    android:id="@+id/cabeceraDatosMascota"
                    android:text="@string/cabecera_datos_mascota"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="#ffffffff"
                    android:layout_span="2"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/tvNombre"
                    android:text="@string/nombre"
                    android:textColor="#ffffffff" />

                <EditText
                    android:id="@+id/etNombre"
                    android:inputType="text"
                    android:textColor="#ffffffff"
                    android:backgroundTint="#ffffff" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:id="@+id/tvRaza"
                    android:text="@string/raza"
                    android:height="20dp"
                    android:textColor="#ffffffff" />

                <EditText
                    android:id="@+id/etRaza"
                    android:width="75dp"
                    android:inputType="text"
                    android:textColor="#ffffffff"
                    android:backgroundTint="#ffffff" />
            </TableRow>
            <TableRow
                android:layout_height="fill_parent"
                android:layout_width="fill_parent" >
                <TextView
                    android:id="@+id/tvPropietario"
                    android:text="@string/propietario"
                    android:textColor="#ffffffff" />

                <EditText
                    android:id="@+id/etPropietario"
                    android:width="220dp"
                    android:inputType="text"
                    android:textColor="#ffffffff"
                    android:backgroundTint="#ffffff" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:id="@+id/tvTelefono"
                    android:text="@string/telefono"
                    android:textColor="#ffffffff" />

                <EditText
                    android:id="@+id/etTelefono"
                    android:layout_span="2"
                    android:inputType="number"
                    android:textColor="#ffffffff"
                    android:backgroundTint="#ffffff" />
            </TableRow>
        </TableLayout>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:id="@+id/btGuardarMascota"
                android:onClick="onClick"
                android:layout_marginTop="52dp"
                android:textColor="#ffc52df4"
                android:background="#ffffffff"
                android:backgroundTint="#ffffffff"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                android:id="@+id/btVolverMascota"
                android:onClick="onClick"
                android:textColor="#ffc52df4"
                android:background="#ffffffff"
                android:gravity="center"
                android:layout_alignTop="@+id/btGuardarMascota"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </TableRow>
</TableLayout>